# trustpartners-assistant

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml  trustpartners-agent-docker-image.yml
app/: main.py
app/api/: chat.py
app/knowledge/: guardrails.py  rag.py
